--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/139/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/139/index.mdx
@@ -45,7 +45,42 @@ import Support from "../_support.mdx";
 
 ## ⚛️ React {#react}
 
+[Future Proofing Your Remix App](https://remix.run/blog/future-flags)
+
+https://twitter.com/remix_run/status/1637930425397153794
+
+---
+
+[Next.js client-only SPA example](https://twitter.com/dan_abramov/status/1636886736784457734)
+
+Next export: https://twitter.com/dan_abramov/status/1636716018973257728
+
+---
+
+https://twitter.com/reactjs/status/1636441676506906626
+
+https://twitter.com/sethwebster/status/1636453286650736646
+
+https://twitter.com/dan_abramov/status/1636450071670562829
+
+- [Create React App is Finally Dead](https://www.youtube.com/watch?v=M4CLvtCS2YU)
+
+https://twitter.com/dan_abramov/status/1636827365677383700
+
+https://twitter.com/t3dotgg/status/1636462921281835009
+
+https://twitter.com/1Marc/status/1636481900381388802
+
+https://twitter.com/mengdi_en/status/1636478852527538183
+
+---
+
+- [Remove layout effect warning on the server](https://github.com/facebook/react/pull/26395)
+- [Dan Abramov on useIsomorphicLayoutEffect name](https://twitter.com/dan_abramov/status/1636176793592905729)
+- [Dan Abramov on the shipping the new React.dev website](https://twitter.com/dan_abramov/status/1638004334544707584)
 - [Will React's New Cache Fix Its "Use" Hook?](https://www.youtube.com/watch?v=T3m-MZkuadU)
+- [Framer-Motion 10.5](https://twitter.com/mattgperry/status/1636714500731592706): `useAnimate()`
+- [create-next-app now asks if you want to start with Tailwind CSS](https://twitter.com/timneutkens/status/1636654046474805249)
 
 <SubscribeFormEmbed />
 
@@ -74,7 +109,8 @@ You build it; you own it! It's a simple mantra that has driven software developm
 
 ## 📱 React-Native {#react-native}
 
-<Todo />
+- [Build a Native View Library with Expo, React-Native, Swift and Kotlin](https://www.youtube.com/watch?v=c-tFADXScEI)
+- [Bottom Sheet 5.0.0 alpha](https://twitter.com/gorhom/status/1637237501294268416): Reanimated v3, Gesture Handler v2, Web support
 
 ---
 
@@ -106,13 +142,35 @@ Pas de contenu cette semaine 😅
 
 ## 🔀 Autre {#other}
 
-<Todo />
+- [Agenda for the 95th meeting of Ecma TC39](https://github.com/tc39/agendas/blob/main/2023/03.md): meeting en cours. [Async Context](https://twitter.com/sebastienlorber/status/1620391460679065601) candidat pour stage 2 👌Et quelques nouvelles [proposals Promise](https://twitter.com/sebastienlorber/status/1638130215443390464) sympa!
+- [The End of Front-End Development](https://www.joshwcomeau.com/blog/the-end-of-frontend-development/)
+- [TypeScript 5.0](https://twitter.com/typescript/status/1636416665071288321)
+- [Prettier 2.8.5](https://twitter.com/PrettierCode/status/1637707276286062593): TypeScript 5.0 support
+- [Vite 4.2](https://twitter.com/vite_js/status/1636362767744765952)
+- [Why We Added package.json Support to Deno](https://deno.com/blog/package-json-support)
+- [Speeding up the JavaScript ecosystem - npm scripts](https://marvinh.dev/blog/speeding-up-javascript-ecosystem-part-4/)
 
 ---
 
 ## 🤭 Fun {#fun}
 
-<Todo />
+https://twitter.com/manucorporat/status/1637874856023687168
+
+https://twitter.com/flaviocopes/status/1637575462015705089
+
+https://twitter.com/flaviocopes/status/1637374435207307265
+
+https://twitter.com/tlakomy/status/1637242328879448064
+
+https://twitter.com/syswarren/status/1636809492179599360
+
+https://twitter.com/trashh_dev/status/1636743375956348928
+
+https://twitter.com/thekitze/status/1636433173390213151
+
+https://twitter.com/AdamRackis/status/1636071788361973760
+
+https://twitter.com/trashh_dev/status/1636048757547765761
 
 [![alt](/emails/issues/122/meme.jpg)](https://twitter.com/TODOTODOTODOTODOTODOTODOTODOTODOTODOTODO)
 
