--- a/website/newsletter/139/index.mdx
+++ b/website/newsletter/139/index.mdx
@@ -59,20 +59,15 @@ Suncel CMS as developer :
 
 **[![Build and Run Synthetic Monitoring That Scales](/emails/issues/134/checkly.jpg)](https://www.checklyhq.com/product/monitoring-as-code/?utm_medium=email&utm_source=newsletter&utm_campaign=this-week-in-react)**
 
-**[Build and Run Synthetic Monitoring That Scales](https://www.checklyhq.com/product/monitoring-as-code/?utm_medium=email&utm_source=newsletter&utm_campaign=this-week-in-react)**
+You build it, you own it! It’s a simple mantra that has driven software development for years. But what is the best way to monitor complex React applications?
 
-You build it; you own it! It's a simple mantra that has driven software development for years. But how do you monitor complex React applications the best way?
+First: Use Playwright to simulate critical user flows and guarantee that your app works. Second: Be confident that mission-critical APIs are up and running.
 
-- First: use Playwright to mimic user flows and guarantee that your app works.
-- Second: be confident that the used APIs are up and running.
+Monitoring as code is a new way to define, test, and deploy entire Playwright-based testing and monitoring setup directly from code. Get started with the Checkly CLI by running npm create @checkly/cli.
 
-"Monitoring as Code" - is a new way to define, test & deploy your entire application monitoring directly from code.
+Learn more about the Checkly CLI [here](https://www.checklyhq.com/docs/cli/?utm_medium=email&utm_source=newsletter&utm_campaign=this-week-in-react).
 
-- Code your monitoring setup and keep in version control
-- Test your application in preview environments to avoid bugs and regressions
-- Deploy your tests and start monitoring production
-
-[Bring your monitoring next to your code for free](https://www.checklyhq.com/product/monitoring-as-code/?utm_medium=email&utm_source=newsletter&utm_campaign=this-week-in-react)
+[Unite your QA, dev, and ops teams with Checkly](https://www.checklyhq.com/product/monitoring-as-code/?utm_medium=email&utm_source=newsletter&utm_campaign=this-week-in-react)
 
 ---
 
