--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/139/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/139/index.mdx
@@ -57,6 +57,12 @@ Next export: https://twitter.com/dan_abramov/status/1636716018973257728
 
 ---
 
+[Introducing react.dev](https://react.dev/blog/2023/03/16/introducing-react-dev)
+
+[New React docs pretend SPAs don't exist anymore](https://wasp-lang.dev/blog/2023/03/17/new-react-docs-pretend-spas-dont-exist)
+
+[How to start a React Project in 2023](https://www.robinwieruch.de/react-starter/)
+
 https://twitter.com/reactjs/status/1636441676506906626
 
 https://twitter.com/sethwebster/status/1636453286650736646
@@ -75,12 +81,14 @@ https://twitter.com/mengdi_en/status/1636478852527538183
 
 ---
 
+- [Internationalization In Next.js 13 With React Server Components](https://www.smashingmagazine.com/2023/03/internationalization-nextjs-13-react-server-components/)
 - [Remove layout effect warning on the server](https://github.com/facebook/react/pull/26395)
 - [Dan Abramov on useIsomorphicLayoutEffect name](https://twitter.com/dan_abramov/status/1636176793592905729)
 - [Dan Abramov on the shipping the new React.dev website](https://twitter.com/dan_abramov/status/1638004334544707584)
 - [Will React's New Cache Fix Its "Use" Hook?](https://www.youtube.com/watch?v=T3m-MZkuadU)
 - [Framer-Motion 10.5](https://twitter.com/mattgperry/status/1636714500731592706): `useAnimate()`
 - [create-next-app now asks if you want to start with Tailwind CSS](https://twitter.com/timneutkens/status/1636654046474805249)
+- [The future of React](https://changelog.com/jsparty/267)
 
 <SubscribeFormEmbed />
 
@@ -107,6 +115,8 @@ Learn more about the Checkly CLI [here](https://www.checklyhq.com/docs/cli/?utm_
 
 - [Build a Native View Library with Expo, React-Native, Swift and Kotlin](https://www.youtube.com/watch?v=c-tFADXScEI)
 - [Bottom Sheet 5.0.0 alpha](https://twitter.com/gorhom/status/1637237501294268416): Reanimated v3, Gesture Handler v2, Web support
+- [react-native-pdf-renderer](https://github.com/douglasjunior/react-native-pdf-renderer)
+- [react-native-permissions 3.8.0 - new architecture support](https://github.com/zoontek/react-native-permissions/releases/tag/3.8.0): support
 
 ---
 
@@ -139,12 +149,19 @@ Pas de contenu cette semaine 😅
 ## 🔀 Autre {#other}
 
 - [Agenda for the 95th meeting of Ecma TC39](https://github.com/tc39/agendas/blob/main/2023/03.md): meeting en cours. [Async Context](https://twitter.com/sebastienlorber/status/1620391460679065601) candidat pour stage 2 👌Et quelques nouvelles [proposals Promise](https://twitter.com/sebastienlorber/status/1638130215443390464) sympa!
-- [The End of Front-End Development](https://www.joshwcomeau.com/blog/the-end-of-frontend-development/)
 - [TypeScript 5.0](https://twitter.com/typescript/status/1636416665071288321)
 - [Prettier 2.8.5](https://twitter.com/PrettierCode/status/1637707276286062593): TypeScript 5.0 support
+- [Announcing Rspack](https://www.rspack.dev/blog/announcement.html)
+- [Farm - Super fast web build tool written in Rust](https://github.com/farm-fe/farm): encore un 😄
 - [Vite 4.2](https://twitter.com/vite_js/status/1636362767744765952)
+- [The End of Front-End Development](https://www.joshwcomeau.com/blog/the-end-of-frontend-development/)
+- [Writing Your Own Reactive Signal Library](https://www.lksh.dev/blog/writing-your-own-reactive-signal-library/)
 - [Why We Added package.json Support to Deno](https://deno.com/blog/package-json-support)
 - [Speeding up the JavaScript ecosystem - npm scripts](https://marvinh.dev/blog/speeding-up-javascript-ecosystem-part-4/)
+- [6 CSS snippets every front-end developer should know in 2023](https://web.dev/6-css-snippets-every-front-end-developer-should-know-in-2023/)
+- [Drizzle - An ORM that lets you just write SQL](https://www.propelauth.com/post/drizzle-an-orm-that-lets-you-just-write-sql)
+- [Introducing "safe npm", a Socket npm Wrapper](https://socket.dev/blog/introducing-safe-npm)
+- [Turbowatch - Extremely fast file change detector](https://github.com/gajus/turbowatch)
 
 ---
 
