--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/140/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/140/index.mdx
@@ -39,7 +39,23 @@ import Support from "../_support.mdx";
 
 ## 💸 Sponsor {#sponsor2}
 
-<Todo />
+**[![Tina.io is a headless CMS for Markdown-powered sites](/emails/issues/140/tinacms.jpg)](https://tina.io/?utm_source=newsletter&utm_term=this-week-in-react)**
+**[Tina.io](https://tina.io/?utm_source=newsletter&utm_term=this-week-in-react) is a headless CMS for Markdown-powered sites**
+
+- Editing UI for your Markdown files
+- UI for MDX components
+- Supports static (SSG) and server-side rendering (SSR)
+- Option for visual editing (live-preview)
+- Build with reusable blocks
+
+Test a starter site
+
+- [Docusaurus](https://github.com/tinacms/tinasaurus) (github.com)
+- [Next.js + Tailwind with visual editing](https://github.com/tinacms/tina-cloud-starter) (github.com)
+
+Or run  ```npx create-tina-app@latest```  then visit ```localhost:3000/admin```
+
+Watch the [4-min demo video](https://www.youtube.com/watch?v=zRkeKSZjlyw)
 
 ---
 
