--- a/website/newsletter/140/index.mdx
+++ b/website/newsletter/140/index.mdx
@@ -24,8 +24,17 @@ import Support from "../_support.mdx";
 ---
 
 ## 💸 Sponsor {#sponsor1}
+**[![React-admin](/emails/issues/140/reactadmin.jpg)](https://marmelab.com/react-admin/?utm_source=newsletter&utm_term=this-week-in-react)**
+**[React-admin](https://marmelab.com/react-admin/?utm_source=newsletter&utm_term=this-week-in-react)The Open-Source Framework for B2B apps**
 
-<Todo />
+Single-Page-Apps are still the best choice to create admin panels, B2B apps, and ERP systems on top of REST/GraphQL APIs. [React-admin](https://marmelab.com/react-admin/?utm_source=newsletter&utm_term=this-week-in-react) is **the open-source framework of reference for building SPAs**.
+
+React-admin offers a library of 150+ business-oriented components. It's not a UI kit: it leverages the best UI kit for React, MUI. React-admin boosts developer productivity by assembling the best-in-class libraries, managing all the repetitive stuff you shouldn’t have to deal with.
+
+Its strongest point? The best developer experience you'll ever have, backed by an awesome documentation and a vibrant community. [And it only takes 30 minutes to get started](https://marmelab.com/react-admin/Tutorial.html) 🚀
+
+React-admin has been actively **maintained for 5 years**, and has already convinced more than 20,000 developers worldwide. Come try it, it is free, forever! 😁
+
 
 ---
 
