--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/140/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/140/index.mdx
@@ -25,7 +25,16 @@ import Support from "../_support.mdx";
 
 ## 💸 Sponsor {#sponsor1}
 
-<Todo />
+**[![React-admin](/emails/issues/140/reactadmin.jpg)](https://marmelab.com/react-admin/?utm_source=newsletter&utm_term=this-week-in-react)**
+**[React-admin](https://marmelab.com/react-admin/?utm_source=newsletter&utm_term=this-week-in-react) Le Framework Open Source d'applications B2B**
+
+Les Single Page Apps restent le meilleur choix pour les applications d'administration, les CRM et les ERP basés sur des APIs REST ou GraphQL. [React-admin](https://marmelab.com/react-admin/?utm_source=newsletter&utm_term=this-week-in-react) est le framework open-source de référence pour le développement de SPA.
+
+React-admin, c'est une bibliothèque de plus de 150 composants orientés métier, qui assemble le fleuron des libs open-source de routing, UI, gestion de formulaire et data fetching pour React. En libérant les développeurs des tâches répétitives, react-admin les rend plus productifs... et plus heureux !
+
+Notre point fort ? La meilleure "Developer Experience" du monde React, grâce à une documentation impeccable, de nombreux exemples et une communauté dynamique.
+React-admin, c'est 6 ans de développement, plus de 20 000 développeurs convaincus, et 3 000 nouvelles applications lancées chaque mois. [Venez l'essayer, c'est gratuit](https://marmelab.com/react-admin/Tutorial.html) - 30 minutes suffisent.
+
 
 ---
 
