--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/141/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/141/index.mdx
@@ -26,7 +26,7 @@ import Support from "../_support.mdx";
 ## 💸 Sponsor {#sponsor1}
 
 **[![React-admin](/emails/issues/140/reactadmin.jpg)](https://marmelab.com/react-admin/?utm_source=newsletter&utm_term=this-week-in-react)**
-**[React-admin](https://marmelab.com/react-admin/?utm_source=newsletter&utm_term=this-week-in-react) Le Framework Open Source d'applications B2B**
+**[React-admin Le Framework Open Source d'applications B2B](https://marmelab.com/react-admin/?utm_source=newsletter&utm_term=this-week-in-react)**
 
 Les Single Page Apps restent le meilleur choix pour les applications d'administration, les CRM et les ERP basés sur des APIs REST ou GraphQL. [React-admin](https://marmelab.com/react-admin/?utm_source=newsletter&utm_term=this-week-in-react) est le framework open-source de référence pour le développement de SPA.
 
@@ -49,7 +49,7 @@ React-admin, c'est 6 ans de développement, plus de 20 000 développeurs convain
 ## 💸 Sponsor {#sponsor2}
 
 **[![Tina.io is a headless CMS for Markdown-powered sites](/emails/issues/140/tinacms.jpg)](https://tina.io/?utm_source=newsletter&utm_term=this-week-in-react)**
-**[Tina.io](https://tina.io/?utm_source=newsletter&utm_term=this-week-in-react) is a headless CMS for Markdown-powered sites**
+**[Tina.io is a headless CMS for Markdown-powered sites](https://tina.io/?utm_source=newsletter&utm_term=this-week-in-react)**
 
 - Editing UI for your Markdown files
 - UI for MDX components
