--- a/website/newsletter/140/index.mdx
+++ b/website/newsletter/140/index.mdx
@@ -25,7 +25,7 @@ import Support from "../_support.mdx";
 
 ## 💸 Sponsor {#sponsor1}
 **[![React-admin](/emails/issues/140/reactadmin.jpg)](https://marmelab.com/react-admin/?utm_source=newsletter&utm_term=this-week-in-react)**
-**[React-admin](https://marmelab.com/react-admin/?utm_source=newsletter&utm_term=this-week-in-react)The Open-Source Framework for B2B apps**
+**[React-admin The Open-Source Framework for B2B apps](https://marmelab.com/react-admin/?utm_source=newsletter&utm_term=this-week-in-react)**
 
 Single-Page-Apps are still the best choice to create admin panels, B2B apps, and ERP systems on top of REST/GraphQL APIs. [React-admin](https://marmelab.com/react-admin/?utm_source=newsletter&utm_term=this-week-in-react) is **the open-source framework of reference for building SPAs**.
 
@@ -49,7 +49,7 @@ React-admin has been actively **maintained for 5 years**, and has already convin
 ## 💸 Sponsor {#sponsor2}
 
 **[![Tina.io is a headless CMS for Markdown-powered sites](/emails/issues/140/tinacms.jpg)](https://tina.io/?utm_source=newsletter&utm_term=this-week-in-react)**
-**[Tina.io](https://tina.io/?utm_source=newsletter&utm_term=this-week-in-react) is a headless CMS for Markdown-powered sites**
+**[Tina.io is a headless CMS for Markdown-powered sites](https://tina.io/?utm_source=newsletter&utm_term=this-week-in-react)**
 
 - Editing UI for your Markdown files
 - UI for MDX components
