--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/141/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/141/index.mdx
@@ -25,8 +25,9 @@ import Support from "../_support.mdx";
 
 ## 💸 Sponsor {#sponsor1}
 
-**[![React-admin](/emails/issues/140/reactadmin.jpg)](https://marmelab.com/react-admin/?utm_source=newsletter&utm_term=this-week-in-react)**
-**[React-admin Le Framework Open Source d'applications B2B](https://marmelab.com/react-admin/?utm_source=newsletter&utm_term=this-week-in-react)**
+[![React-admin](/emails/issues/140/reactadmin.jpg)](https://marmelab.com/react-admin/?utm_source=newsletter&utm_term=this-week-in-react)
+
+**[React-admin - Le Framework Open Source d'applications B2B](https://marmelab.com/react-admin/?utm_source=newsletter&utm_term=this-week-in-react)**
 
 Les Single Page Apps restent le meilleur choix pour les applications d'administration, les CRM et les ERP basés sur des APIs REST ou GraphQL. [React-admin](https://marmelab.com/react-admin/?utm_source=newsletter&utm_term=this-week-in-react) est le framework open-source de référence pour le développement de SPA.
 
@@ -34,7 +35,6 @@ React-admin, c'est une bibliothèque de plus de 150 composants orientés métier
 
 Notre point fort ? La meilleure "Developer Experience" du monde React, grâce à une documentation impeccable, de nombreux exemples et une communauté dynamique.
 React-admin, c'est 6 ans de développement, plus de 20 000 développeurs convaincus, et 3 000 nouvelles applications lancées chaque mois. [Venez l'essayer, c'est gratuit](https://marmelab.com/react-admin/Tutorial.html) - 30 minutes suffisent.
-
 
 ---
 
@@ -48,7 +48,8 @@ React-admin, c'est 6 ans de développement, plus de 20 000 développeurs convain
 
 ## 💸 Sponsor {#sponsor2}
 
-**[![Tina.io is a headless CMS for Markdown-powered sites](/emails/issues/140/tinacms.jpg)](https://tina.io/?utm_source=newsletter&utm_term=this-week-in-react)**
+[![Tina.io is a headless CMS for Markdown-powered sites](/emails/issues/140/tinacms.jpg)](https://tina.io/?utm_source=newsletter&utm_term=this-week-in-react)
+
 **[Tina.io is a headless CMS for Markdown-powered sites](https://tina.io/?utm_source=newsletter&utm_term=this-week-in-react)**
 
 - Editing UI for your Markdown files
@@ -62,7 +63,7 @@ Test a starter site
 - [Docusaurus](https://github.com/tinacms/tinasaurus) (github.com)
 - [Next.js + Tailwind with visual editing](https://github.com/tinacms/tina-cloud-starter) (github.com)
 
-Or run  ```npx create-tina-app@latest```  then visit ```localhost:3000/admin```
+Or run  `npx create-tina-app@latest`  then visit `localhost:3000/admin`
 
 Watch the [4-min demo video](https://www.youtube.com/watch?v=zRkeKSZjlyw)
 
