--- a/website/newsletter/140/index.mdx
+++ b/website/newsletter/140/index.mdx
@@ -24,8 +24,10 @@ import Support from "../_support.mdx";
 ---
 
 ## 💸 Sponsor {#sponsor1}
-**[![React-admin](/emails/issues/140/reactadmin.jpg)](https://marmelab.com/react-admin/?utm_source=newsletter&utm_term=this-week-in-react)**
-**[React-admin The Open-Source Framework for B2B apps](https://marmelab.com/react-admin/?utm_source=newsletter&utm_term=this-week-in-react)**
+
+[![React-admin](/emails/issues/140/reactadmin.jpg)](https://marmelab.com/react-admin/?utm_source=newsletter&utm_term=this-week-in-react)
+
+**[React-admin - The Open-Source Framework for B2B apps](https://marmelab.com/react-admin/?utm_source=newsletter&utm_term=this-week-in-react)**
 
 Single-Page-Apps are still the best choice to create admin panels, B2B apps, and ERP systems on top of REST/GraphQL APIs. [React-admin](https://marmelab.com/react-admin/?utm_source=newsletter&utm_term=this-week-in-react) is **the open-source framework of reference for building SPAs**.
 
@@ -34,7 +36,6 @@ React-admin offers a library of 150+ business-oriented components. It's not a UI
 Its strongest point? The best developer experience you'll ever have, backed by an awesome documentation and a vibrant community. [And it only takes 30 minutes to get started](https://marmelab.com/react-admin/Tutorial.html) 🚀
 
 React-admin has been actively **maintained for 5 years**, and has already convinced more than 20,000 developers worldwide. Come try it, it is free, forever! 😁
-
 
 ---
 
@@ -48,7 +49,8 @@ React-admin has been actively **maintained for 5 years**, and has already convin
 
 ## 💸 Sponsor {#sponsor2}
 
-**[![Tina.io is a headless CMS for Markdown-powered sites](/emails/issues/140/tinacms.jpg)](https://tina.io/?utm_source=newsletter&utm_term=this-week-in-react)**
+[![Tina.io is a headless CMS for Markdown-powered sites](/emails/issues/140/tinacms.jpg)](https://tina.io/?utm_source=newsletter&utm_term=this-week-in-react)
+
 **[Tina.io is a headless CMS for Markdown-powered sites](https://tina.io/?utm_source=newsletter&utm_term=this-week-in-react)**
 
 - Editing UI for your Markdown files
@@ -62,10 +64,9 @@ Test a starter site
 - [Docusaurus](https://github.com/tinacms/tinasaurus) (github.com)
 - [Next.js + Tailwind with visual editing](https://github.com/tinacms/tina-cloud-starter) (github.com)
 
-Or run  ```npx create-tina-app@latest``` then visit ```localhost:3000/admin```
+Or run  `npx create-tina-app@latest` then visit `localhost:3000/admin`
 
 Watch the [4-min demo video](https://www.youtube.com/watch?v=zRkeKSZjlyw)
-
 
 ---
 
